# automl

./: .gitignore  LICENSE  README.md  pyproject.toml
Dataset/: day_sum_20210614.csv  day_sum_20220605.csv  day_sum_20240609.csv
src/: day_sum_20220602.csv  day_sum_20220603.csv  day_sum_20230621.csv  day_sum_20230622.csv  day_sum_20240610.csv  day_sum_20240612.csv
src/automl/: __init__.py  automl.py  dataprofile.py  day_sum_20200629.csv  day_sum_20210611.csv  day_sum_20210612.csv  day_sum_20210613.csv  day_sum_20210615.csv  day_sum_20220604.csv  day_sum_20220606.csv  day_sum_20230623.csv  day_sum_20230624.csv  day_sum_20230625.csv  day_sum_20230626.csv  day_sum_20240611.csv  day_sum_20240613.csv  dbf_predictor.py
