[project]
name = "p2025-automl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Today", email = "today@iii.org.tw" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
automl = "automl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/automl"]
