[project]
name = "automl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Today", email = "today@iii.org.tw" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "setuptools>=79.0.0",
    "streamlit>=1.44.1",
    "ydata-profiling>=4.16.1",
    "kaleido==0.2.1",
    "pycaret>=3.0.0",
    "playwright>=1.51.0",
    "ipykernel>=6.29.5",
    "umap-learn>=0.5.7",
]

[project.scripts]
automl = "automl.automl:main"
data-profile = "automl.dataprofile:main"
dbf-predictor = "automl.dbf_predictor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/automl"]
